# Surfer

./: .gitignore  README.md  pyproject.toml  simulate.py
.surfer/: weights.json
surfer/: __init__.py  __main__.py  agent.py  bandit.py  env.py  keywords.py  llm_critic.py  nvidia_llm.py  reward.py  weights_store.py  wiki.py
tests/: test_agent.py  test_bandit.py  test_llm_critic.py  test_reward.py  test_weights_store.py  test_wiki.py
